@@ -32,6 +32,7 @@ Version 1.5.1
        real, not just recording it. (Stefan)
 - BUG: A message returned from a post-commit hook script was not shown
        in the progress dialog. (Stefan)
+- BUG: webviewer: properties were added on files too. (Stefan)
 
 Version 1.5.0
 - CHG: Support for IPv6 disabled due to problems with merging and terrible
